# world-seed

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2edb4661f46c_initial_migration.py
backend/app/: config.py  main.py
backend/app/ai/: service.py
backend/app/api/graphql/: __init__.py  context.py  mutations.py  queries.py
backend/app/database/: __init__.py  transactions.py
backend/app/models/: entity.py
backend/app/schemas/: entity.py
backend/src/: main.py
frontend/: .env.production.md  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: ErrorMessage.tsx
frontend/src/components/entities/: EntityDashboard.tsx  EntityForm.tsx  EntityFormSkeleton.tsx  EntityList.tsx  EntitySkeleton.tsx  EntityTypeDashboard.tsx  EntityTypeForm.tsx  EntityTypeList.tsx
frontend/src/hooks/: use-error-toast.ts
frontend/src/lib/: graphql-client.ts
frontend/src/services/: entityService.ts
frontend/src/stores/: entityStore.ts  uiStore.ts
frontend/src/types/: graphql.ts
modal/: comfyui.py  jupyter.py  workflow_api.json
